--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react-dom": "^17.0.1"
   },
   "browserslist": [
-    "last 2 Chrome versions",
-    "last 2 Firefox versions"
+    "last 2 Chrome versions"
   ]
 }
