--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "dev": "parcel src/index.html"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
